# hype-sukuk

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  REFACTORING_SUMMARY.md  Userflow.md  hype-sukuk.md  netlify.toml  package.json  pnpm-lock.yaml  tsconfig.json
app/: .env.local.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
app/components/: AccrualHistory.tsx  ClaimProfitForm.tsx  KycStatusBadge.tsx  LearnModal.tsx  NavBar.tsx  OnboardingTour.tsx  OrderBook.tsx  PlaceOrderForm.tsx  PortfolioSummary.tsx  ProfitBanner.tsx  ProfitChart.tsx  ProfitChartClient.tsx  TransactionResult.tsx  WalletButton.tsx  ZkMeWidget.tsx
app/hooks/: useModal.ts  useTeeSession.ts  useTransactionStatus.ts
app/lib/: connections.ts  constants.ts  errors.ts  magicblock-tee.ts  programs.ts
app/lib/idl/: sukuk_hook.json  sukuk_rollup.json
app/pages/: _app.tsx  claim.tsx  index.tsx  kyc.tsx  otc.tsx  portfolio.tsx
app/pages/api/: rpc.ts
app/pages/api/distribution/: proof.ts  roots.ts
app/pages/api/zkme/: access-token.ts  whitelist.ts
app/styles/: globals.css
programs/sukuk_hook/: Cargo.toml
programs/sukuk_hook/src/: errors.rs  lib.rs
programs/sukuk_hook/src/instructions/: add_investor.rs  initialize_extra_metas.rs  initialize_registry.rs  mod.rs  remove_investor.rs  renew_investor.rs  set_rollup_state.rs  transfer_hook.rs  update_lock_period.rs
programs/sukuk_hook/src/state/: investor_entry.rs  investor_registry.rs  mod.rs
programs/sukuk_rollup/: Cargo.toml
programs/sukuk_rollup/src/: errors.rs  lib.rs
programs/sukuk_rollup/src/instructions/: accrue_profit.rs  claim_profit.rs  commit_distribution.rs  delegate_accounts.rs  initialize_accrual_state.rs  initialize_sukuk_vault.rs  match_otc_order.rs  mod.rs  place_otc_order.rs  schedule_profit_crank.rs  undelegate_and_settle.rs
programs/sukuk_rollup/src/state/: accrual_state.rs  claim_receipt.rs  cross_program.rs  distribution_root.rs  mod.rs  otc_order.rs  sukuk_vault.rs
scripts/: get-tee-token.ts  schedule-crank.ts  setup-devnet.ts
tests/: 01_mint_setup.ts  02_registry_init.ts  03_whitelist.ts  04_transfer_hook.ts  05_zkme_kyc.ts  06_delegation.ts  07_profit_accrual.ts  08_otc_matching.ts  09_settle_and_commit.ts  helpers.ts
