[package]
name = "sukuk_hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sukuk_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang    = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl     = { version = "0.32.1", features = ["token_2022", "token_2022_extensions", "associated_token"] }
spl-token-2022              = { version = "7.0", features = ["no-entrypoint"] }
spl-tlv-account-resolution  = "0.10"
spl-transfer-hook-interface = "0.10"
spl-associated-token-account = { version = "7.0", features = ["no-entrypoint"] }
