[package]
name = "sukuk_rollup"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sukuk_rollup"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang           = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl            = { version = "0.32.1", features = ["token_2022"] }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
magicblock-magic-program-api = { version = "0.3.1", default-features = false }
bincode  = "^1.3"
rs_merkle = "1.4.2"
sha2     = "0.10.8"
